<resources>
    <string name="app_name">MyApp</string>
    <string name="text1">Hello</string>
    <string name="text2">World</string>
    <string name="push">Push</string>
    <string name="chooseDz">Выберите № домашнего задания</string>
    <string name="Dz1">ДЗ_1</string>
    <string name="Dz2">ДЗ_2</string>
    <string name="Austria">Флаг Австрии</string>
    <string name="Poland">Флаг Польши</string>
    <string name="Italy">Флаг Италии</string>
    <string name="Columbia">Флаг Колумбии</string>
    <string name="Madagaskar">Флаг Мадагаскара</string>
    <string name="Tailand">Флаг Тайланда</string>
    <string name="Denmark">Флаг Дании</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="registr">REGISTER</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="forgot"><u> Forgot your username/password? </u></string>
    <string name="enter_link">Вставьте ссылку на картинку</string>
    <string name="get_image">Получить картинку</string>
    <string name="login_page">Login page</string>
    <string name="load_image">ДЗ_3</string>
    <string name="dz_4">ДЗ_4</string>
    <string name="show_oal">показать сову</string>
    <string name="number3">Число 3</string>
    <string name="number2">Число 2</string>
    <string name="number1">Число 1</string>
    <string name="drawDiagram">Построить диаграмму</string>
    <string name="nowTime">Текущее время:</string>
    <string name="dz_5">ДЗ_5</string>
    <string name="dz_6">ДЗ_6</string>
    <string name="turn_on">ВКЛ WiFi</string>
    <string name="turn_off">ВЫКЛ WiFi</string>
    <string name="save_student">SAVE</string>
    <string name="delete_student">DELETE</string>
    <string name="create_student">CREATE</string>
    <string name="photo_url">Photo url</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="search">Search</string>
    <string name="dz_14">ДЗ_14</string>

</resources>
