<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d6fad7"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Austria"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/red" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Poland"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Italy"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/Green" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/red" />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Columbia"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/yellow" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/blue" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Madagaskar"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@color/red" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@color/Green" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Tailand"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/red" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@color/blue" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/red" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Denmark"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/red" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/red" />
        </LinearLayout>

        <TextView
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/red" />

            <TextView
                android:layout_width="20dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/white" />

            <TextView
                android:layout_width="190dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/red" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>